--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.datasource.url=jdbc:mysql://eschool_mysql:3306/ejournal?useUnicode=true&characterEncoding=utf8
-spring.datasource.url=${DATASOURCE_URL:jdbc:mysql://127.31.0.129:3306/eschool?useUnicode=true&characterEncoding=utf8&createDatabaseIfNotExist=true&&autoReconnect=true&useSSL=false}
-spring.datasource.username=${DATASOURCE_USERNAME:eschool}
-spring.datasource.password=${DATASOURCE_PASSWORD:SravPes}
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.liquibase.change-log=classpath:db/liquibase-changelog.xml
 spring.liquibase.parameters.admin.username=${ADMIN_USERNAME:administrator}
