Deployment scripts added2

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ deploy:
   skip_cleanup: true
   acl: public_read
   local_dir: target
-
+after_deploy:
   script: ./scriptci/updateRun.sh
 env:
   global:
