--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,4 @@ $RECYCLE.BIN/
 
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
+terraform/terraform.tfstate.backup
